# gossip

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  conanfile.txt  guix.scm
.github/workflows/: android.yml  cmake.yml
cmake/: aarch64-toolchain.cmake
include/: Collector.hpp  Cpu.hpp  Exceptions.hpp  Process.hpp  Smaps.hpp
src/: CMakeLists.txt  Collector.cpp  Cpu.cpp  Process.cpp  Smaps.cpp  main.cpp
test/: CMakeLists.txt  main.cpp  test.cpp  test_Smaps.cpp  test_cpu.cpp  test_process.cpp
